Added twitter card

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8"/>
-  <title>Draugs App</title>
+  <title>Draugs</title>
 
   <base href="/"/>
 
@@ -11,9 +11,14 @@
   <meta name="format-detection" content="telephone=no"/>
   <meta name="msapplication-tap-highlight" content="no"/>
   <meta name="description" content="Atrodi sev draugu no dzīvnieku patversmes!">
-  <meta property="og:title" content="Draugs App" />
-
+  <meta property="og:title" content="Draugs" />
   <meta property="og:image" content="https://draugs.app/assets/images/logo.png" />
+  <meta property="og:url" content="https://draugs.app" />
+  <meta property="og:description" content="Atrodi sev draugu no dzīvnieku patversmes!" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:site" content="@draugsapp" />
+  <meta name="twitter:creator" content="@draugsapp" />
+  
 
 
   <link rel="apple-touch-icon" sizes="57x57" href="/assets/icons/apple-icon-57x57.png">
