--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,9 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#2a677b">
+
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCJoCmvbyg3PDod54c6ML4etQ0s0yKY_TA"
+  type="text/javascript"></script>
 </head>
 
 <body>
